--- a/dimistyles.css
+++ b/dimistyles.css
@@ -77,7 +77,7 @@ header nav {
     top: .25em;
     left: 22em;
     z-index: 505;
-    padding: 0em 0em 0em 0;
+    padding: 0 0 0 0;
     
 } 
 
@@ -117,7 +117,7 @@ nav ul li {
     font-size: 2em;
     margin-right: 1em;
     margin-left: 1em;
-    font-family: Optima, Arsenal, "Gill Sans" sans-serif;
+    font-family: Optima, Arsenal, sans-serif;
     
 }
 
@@ -141,7 +141,7 @@ h1#logo a {
 }
 
 #homewrapper {
-    margin-top: 0em;
+    margin-top: 0;
     width: 100%;
     padding: 0;
     margin-right: auto;
@@ -158,19 +158,19 @@ h1#logo a {
     margin-right: auto;
     background-color: ghostwhite;
     margin-top: 6.2em;
-    padding: 0em 0em 2em 0em;
+    padding: 0 0 2em 0em;
     box-shadow: 8px 18px 15px 8px rgb(47, 79, 79, .36);
     margin-bottom: 0;
 }
 
 h1 {
-    padding-top: 0em;
+    padding-top: 0;
     text-indent: -3000em;
 }
 
 .binitials {
     font-style:italic;
-    padding-top: 0em;
+    padding-top: 0;
     font-family: serif;
     margin-right: .25em;
     font-size: 1.3em;
@@ -185,7 +185,7 @@ h1 {
 }
 
 h1 span.design {
-    padding-top: 0em;
+    padding-top: 0;
     font-style: italic;
     font-family: serif;
     letter-spacing: 1px;
@@ -288,7 +288,7 @@ span.slogan {
     animation-timing-function: ease-in-out;
     opacity: 0;
     padding: 0;
-    scale(2);
+    transform: scale(2);
     
 }
 
@@ -466,7 +466,7 @@ span.slogan {
     opacity: 0;
     z-index: -1;
     animation-name: eastward2;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
     animation-delay: .5s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
@@ -488,8 +488,8 @@ span.slogan {
     0% { top: 2em; }
     100% { top: 2em; }*/
 
-    /*0% { transform: scale(0) }
-    100% { transform: scale(1) }*/
+    0% { transform: scale(0) }
+    100% { transform: scale(1) }
 
 }
 
@@ -501,7 +501,7 @@ span.slogan {
      top: -25em;
      opacity: 0;
      animation-name: southward1;
-     animation-duration: 1.5s;
+     animation-duration: .5s;
      animation-delay: 1s;
      animation-fill-mode: forwards;
      animation-iteration-count: 1;
@@ -522,8 +522,8 @@ span.slogan {
     0% { top: -25em; }
     100% { top: -25em; }*/
 
-    /*0% { transform: scale(0) }
-    100% { transform: scale(1) }*/
+    0% { transform: scale(0) }
+    100% { transform: scale(1) }
 
  }
 
@@ -579,7 +579,7 @@ span.slogan {
  #about #gallery #zen #zenimg {
      width: 448px;
      height: 490px;
-     padding: 0em;
+     padding: 0;
      border: 5px solid ghostwhite;
      margin-left: 10%;
      margin-top: 2em;
@@ -619,7 +619,7 @@ span.slogan {
 #about #gallery #scifi #scifiimg {
     width: 400px;
     height: 300px;
-    margin-top: 0em;
+    margin-top: 0;
 }
 
 #scifi {
@@ -674,14 +674,14 @@ span.slogan {
 .siteblurb {
     font-size: 1em;
     max-width: 500px;
-    margin-left: 0em;
+    margin-left: 0;
     margin-top: .3em;
     margin-bottom: 1.3em;
     
 }
 
 .galleryimg {
-    margin-left: 0em;
+    margin-left: 0;
 }
 
 .siterow, .siterow2 {
@@ -758,7 +758,7 @@ span.slogan {
     margin-left: auto;
     margin-right: auto;
     border: 8px solid darkslategray;
-    margin-top: 0em;
+    margin-top: 0;
     margin-bottom: 1em;
     border-radius: 25px;
     padding: 2em;
@@ -779,7 +779,7 @@ fieldset legend {
 
 fieldset input[type=text] {
     min-width: 50%;
-    margin-top: 0em;
+    margin-top: 0;
     margin-right: auto;
     margin-left: 1em;
     border-radius: 25px;
@@ -815,8 +815,8 @@ fieldset p {
 fieldset label {
     font-family: serif, Arsenal, Optima, "Gill Sans", sans-serif;
     font-size: 1.5em;
-    margin-right: 0em;
-    margin-left: 0em;
+    margin-right: 0;
+    margin-left: 0;
     display:inline-block;
     margin-bottom: 1em;
 }
@@ -827,7 +827,7 @@ textarea {
     margin-left: 5em;
     height: 5em;
     font-size: 1em;
-    padding: 1em 0em 1em 1em;
+    padding: 1em 0 1em 1em;
     border: 1px solid black;
 }
 
@@ -841,8 +841,8 @@ fieldset button {
     font-size: 2em;
     padding: .32em;
     margin-top: .5em;
-    margin-bottom: 0em;
-    margin-left: 0em;
+    margin-bottom: 0;
+    margin-left: 0;
     border-radius: 15px;
     background-image: radial-gradient(rgb(215, 218, 221) 64%, darkslategray 98%);
     color: darkolivegreen;
@@ -883,9 +883,9 @@ fieldset button {
     color: white;
     height: auto;
     padding-top: 1em;
-    padding-bottom: 0em;
+    padding-bottom: 0;
     margin-top: 1em;
-    margin-bottom: 0em;
+    margin-bottom: 0;
     border-top: 15px solid black;
 }
 
@@ -922,8 +922,8 @@ footer li {
 
 footer .copyrightinfo {
     display: block;
-    margin-top: 0em;
-    margin-bottom: 0em;
+    margin-top: 0;
+    margin-bottom: 0;
     width: 95%;
     margin-left: auto;
     margin-right: auto;
@@ -951,8 +951,8 @@ footer .footersection2 nav.nav2 {
     justify-content:center;
     width: 94.8%;
     position: relative;
-    top: 0em;
-    left: 0em;
+    top: 0;
+    left: 0;
     margin-left: auto;
     margin-right: auto;
     padding: 0;
@@ -968,7 +968,7 @@ footer .footersection2 nav.nav2 ul a:hover {
 }
 
 footer .footersection2 nav.nav2 ul {
-    display:inline-flexbox;
+    display:inline-flex;
     padding: 0;
     
 }
@@ -1002,7 +1002,7 @@ footer .footersection2 nav.nav2 ul li {
         /*color: #f2dabd;*/
         color: white;
         font-size: 1.6em;
-        margin-bottom: 0em;
+        margin-bottom: 0;
         padding-right: 0;
         margin-right: 0;
         
@@ -1028,7 +1028,7 @@ footer .footersection2 nav.nav2 ul li {
     #home h2 {
         position: relative;
         width: 350px;
-        font-family: Optima, Arsenal, "Gill Sans", sans-serif;
+        font-family: Optima, Arsenal, 'Gill Sans', sans-serif;
         left: 3em;
         top: 7.5em;
         font-size: 1.2em;
@@ -1095,10 +1095,10 @@ footer .footersection2 nav.nav2 ul li {
     header nav {
         width: 512px;
         position: absolute;
-        top: 0em;
+        top: 0;
         left: 18em;
         z-index: 505;
-        padding: 0em 0em 0em 0;
+        padding: 0 0 0 0;
         
     } 
     
@@ -1123,7 +1123,7 @@ footer .footersection2 nav.nav2 ul li {
         font-size: 1.2em;
         margin-right: 1em;
         margin-left: 1em;
-        font-family: Optima, Arsenal, "Gill Sans" sans-serif;
+        font-family: Optima, Arsenal, sans-serif;
         
     }
 
@@ -1152,7 +1152,7 @@ footer .footersection2 nav.nav2 ul li {
         flex: auto;
         justify-content:center;
         width: 95%;
-        left: 0em;
+        left: 0;
         margin-left: auto;
         margin-right: auto;
         padding: 0;
@@ -1177,7 +1177,7 @@ footer .footersection2 nav.nav2 ul li {
 
     footer .copyrightinfo {
         display: block;
-        margin-top: 0em;
+        margin-top: 0;
         margin-bottom: .25em;
         width: 95.4%;
         margin-left: auto;
@@ -1206,6 +1206,8 @@ footer .footersection2 nav.nav2 ul li {
         padding: 0;
         transform:scale(.67);
     }
+
+}
    
  /*  #c {
            width: 42.3%;
@@ -1429,8 +1431,6 @@ footer .footersection2 nav.nav2 ul li {
            100% { opacity: 0.75; }
         } */
 
-   }
-
 @media screen and (max-width: 960px) {
 
     h1#logo a {
@@ -1485,7 +1485,7 @@ footer .footersection2 nav.nav2 ul li {
         top: 3em;
         left: 2.5em;
         z-index: 505;
-        padding: 0em 0em 1em 0;
+        padding: 0 0 1em 0;
         
     } 
 
@@ -1509,7 +1509,7 @@ footer .footersection2 nav.nav2 ul li {
         display: inline;
         font-size: 1.2em;
         margin-right: 2.2em;
-        font-family: Optima, Arsenal, "Gill Sans" sans-serif;
+        font-family: Optima, Arsenal, sans-serif;
         
     }
 
@@ -1545,7 +1545,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-right: auto;
         background-color: ghostwhite;
         margin-top: 7.2em;
-        padding: 0em 0em 2em 0em;
+        padding: 0 0 2em 0;
         box-shadow: 8px 18px 15px 8px rgb(47, 79, 79, .36);
         margin-bottom: 0;
     }
@@ -1585,6 +1585,8 @@ footer .footersection2 nav.nav2 ul li {
         padding: 0;
         transform:scale(.5);
     }
+
+}
 
   /*  #c {
         width: 30%;
@@ -1808,7 +1810,7 @@ footer .footersection2 nav.nav2 ul li {
         100% { opacity: 0.75; }
      } */
 
-}
+
 
 @media screen and (max-width: 720px) {
 
@@ -1845,6 +1847,7 @@ footer .footersection2 nav.nav2 ul li {
     }
     
     @keyframes slogapp {
+
         0% { opacity: 0; }
         100% { opacity: 1; }
     }
@@ -1870,7 +1873,7 @@ footer .footersection2 nav.nav2 ul li {
         display: inline;
         font-size: 1em;
         margin-right: 2.8em;
-        font-family: Optima, Arsenal, "Gill Sans" sans-serif;
+        font-family: Optima, Arsenal, sans-serif;
         
     }
 
@@ -1997,8 +2000,10 @@ footer .footersection2 nav.nav2 ul li {
     }
     
     @keyframes slogapp {
+
         0% { opacity: 0; }
         100% { opacity: 1; }
+
     }
 
     header nav ul {
@@ -2024,7 +2029,7 @@ footer .footersection2 nav.nav2 ul li {
         width: 80px;
         margin-left: auto;
         margin-right: auto;
-        font-family: Optima, Arsenal, "Gill Sans" sans-serif;
+        font-family: Optima, Arsenal, sans-serif;
         
     }
 
