--- a/dimistyles.css
+++ b/dimistyles.css
@@ -458,7 +458,7 @@ span.slogan {
 #home #dblug {
     
     min-width: 1117px;
-    min-height: 250px;
+    min-height: 16em;
     background-color: #377D8C;
     position: absolute;
     top: 2em;
@@ -488,8 +488,8 @@ span.slogan {
     0% { top: 2em; }
     100% { top: 2em; }*/
 
-    /*0% { transform: scale(0) }
-    100% { transform: scale(1) }*/
+    0% { transform: scale(0) }
+    100% { transform: scale(1) }
 
 }
 
