--- a/dimistyles.css
+++ b/dimistyles.css
@@ -461,7 +461,7 @@ span.slogan {
 #home #dblug {
     
     min-width: 1117px;
-    min-height: 15.625em;
+    min-height: 25%;
     background-color: #377D8C;
     position: absolute;
     top: 2em;
