--- a/dimistyles.css
+++ b/dimistyles.css
@@ -246,7 +246,6 @@ span.slogan {
     padding: 0;
     top: 22em;
     left: 0em;
-    transform: scale(1);
 }
 
 #c {
@@ -1191,7 +1190,7 @@ footer .footersection2 nav.nav2 ul li {
 
     #centerbox {
         width: 1200px;
-        height: 1000px;
+        /*height: 1000px;*/
         margin-left:auto;
         margin-right:auto;
         position: relative;
@@ -1570,7 +1569,7 @@ footer .footersection2 nav.nav2 ul li {
 
     #centerbox {
         width: 1200px;
-        height: 1000px;
+        /*height: 1000px;*/
         margin-left:auto;
         margin-right:auto;
         position: relative;
@@ -1810,7 +1809,7 @@ footer .footersection2 nav.nav2 ul li {
 
     #centerbox {
         width: 1200px;
-        height: 1000px;
+        /*height: 1000px;*/
         margin-left:auto;
         margin-right:auto;
         position: relative;
@@ -1963,7 +1962,7 @@ footer .footersection2 nav.nav2 ul li {
 
     #centerbox {
         width: 1200px;
-        height: 1000px;
+        /*height: 1000px;*/
         margin-left:auto;
         margin-right:auto;
         position: relative;
