--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2110,7 +2110,23 @@ footer .footersection2 nav.nav2 ul li {
 
 }
 
+@media screen and (max-width: 500px) {
 
+    #centerbox {
+        width: 1200px;
+        /*height: 1000px;*/
+        margin-left:auto;
+        margin-right:auto;
+        position: relative;
+        top: -16.5em;
+        left: -17em;
+        padding: 0;
+        transform:scale(.34);
+    }
+
+
+
+}
 
 
 
