--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2124,6 +2124,46 @@ footer .footersection2 nav.nav2 ul li {
         transform:scale(.30);
     }
 
+h1#logo a {
+        position: absolute;
+        top: 0.25em;
+        left: 1em;
+        background-image: url(letter_images/logo_djcdesign.png);
+        background-size:contain;
+        background-repeat:no-repeat;
+        z-index: 3000;
+        width: 210px;
+        height: 35px;
+        text-indent: -3000em;
+    }
+
+    header nav ul {
+        margin-top: .25em;
+        border-top: 5px solid #BFA288;
+        border-bottom: 5px solid #BFA288;
+        padding-top: .25em;
+        padding-bottom: .25em;
+        position: relative;
+        padding-left: 0;
+        padding-right: 0;
+        width: 400px;
+    }
+
+    nav ul li.about {
+        margin-left: 4em;
+        margin-right: auto;
+    }
+
+    nav ul li {
+        display: inline-block;
+        font-size: .7em;
+        width: 80px;
+        margin-left: auto;
+        margin-right: auto;
+        font-family: Optima, Arsenal, sans-serif;
+        
+    }
+
 
 
 }
