--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2118,7 +2118,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top: -20em;
+        top: -21em;
         left: -22em;
         padding: 0;
         transform:scale(.28);
@@ -2135,19 +2135,20 @@ h1#logo a {
         width: 210px;
         height: 35px;
         text-indent: -3000em;
+	padding-bottom: 0;
 	margin-bottom: 0;
     }
 
     header nav ul {
-        margin-top: .2em;
+        margin-top: 0;
         border-top: 4px solid #BFA288;
         border-bottom: 5px solid #BFA288;
-        padding-top: .05em;
-        padding-bottom: .05em;
+        padding-top: 0;
+        padding-bottom: 0;
         position: relative;
         padding-left: 0;
         padding-right: 0;
-        width: 310px;
+        width: 316px;
     }
 
     nav ul li.about {
