--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2119,9 +2119,9 @@ footer .footersection2 nav.nav2 ul li {
         margin-right:auto;
         position: relative;
         top: -21em;
-        left: -22em;
+        left: -23em;
         padding: 0;
-        transform:scale(.28);
+        transform:scale(.27);
     }
 
 h1#logo a {
@@ -2168,11 +2168,25 @@ h1#logo a {
         
     }
 
-
-
 }
 
+@media screen and (max-width: 360px) {
 
+ #centerbox {
+        width: 1200px;
+        /*height: 1000px;*/
+        margin-left:auto;
+        margin-right:auto;
+        position: relative;
+        top: -22em;
+        left: -24em;
+        padding: 0;
+        transform:scale(.2);
+    }
+
+
+	
+}
 
 
 
