--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2119,7 +2119,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-right:auto;
         position: relative;
         top: -21em;
-        left: -23.25em;
+        left: -23em;
         padding: 0;
         transform:scale(.27);
     }
@@ -2148,7 +2148,7 @@ h1#logo a {
         position: relative;
         padding-left: 0;
         padding-right: 0;
-        width: 316px;
+        width: 312px;
     }
 
     nav ul li.about {
@@ -2181,10 +2181,37 @@ h1#logo a {
         top: -23em;
         left: -25.5em;
         padding: 0;
-        transform:scale(.2);
+        transform:scale(.19);
     }
 
+ header nav ul {
+        margin-top: 0;
+        border-top: 4px solid #BFA288;
+        border-bottom: 5px solid #BFA288;
+        padding-top: 0;
+        padding-bottom: 0;
+        position: relative;
+        padding-left: 0;
+        padding-right: 0;
+        width: 300px;
+    }
 
+    nav ul li.about {
+        margin-left: 3.5em;
+        margin-right: auto;
+    }
+
+    nav ul li {
+        display: inline-block;
+        font-size: .7em;
+        width: 80px;
+	padding-top: 0;
+	padding-bottom: 0;
+        margin-left: auto;
+        margin-right: auto;
+        font-family: Optima, Arsenal, sans-serif;
+        
+    }
 	
 }
 
