--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2141,18 +2141,18 @@ h1#logo a {
 
     header nav ul {
         margin-top: 0;
-        border-top: 4px solid #BFA288;
-        border-bottom: 5px solid #BFA288;
+        border-top: 3.2px solid #BFA288;
+        border-bottom: 3.2px solid #BFA288;
         padding-top: 0;
         padding-bottom: 0;
         position: relative;
         padding-left: 0;
         padding-right: 0;
-        width: 308px;
+        width: 306px;
     }
 
     nav ul li.about {
-        margin-left: 3em;
+        margin-left: 2.5em;
         margin-right: auto;
     }
 
@@ -2160,7 +2160,8 @@ h1#logo a {
         display: inline-block;
         font-size: .7em;
         width: 80px;
-        margin-right: 1.5em;
+        margin-left: auto;
+	margin-right: auto;
         font-family: Optima, Arsenal, sans-serif;
         
     }
@@ -2184,8 +2185,8 @@ h1#logo a {
 
  header nav ul {
         margin-top: 0;
-        border-top: 4px solid #BFA288;
-        border-bottom: 5px solid #BFA288;
+        border-top: 3.2px solid #BFA288;
+        border-bottom: 3.2px solid #BFA288;
         padding-top: 0;
         padding-bottom: 0;
         position: relative;
