--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2178,9 +2178,24 @@ h1#logo a {
         margin-right:auto;
         position: relative;
         top: -24em;
-        left: -27.2em;
+        left: -27.5em;
         padding: 0;
         transform:scale(.19);
+    }
+
+h1#logo a {
+        position: absolute;
+        top: 0.25em;
+        left: .5em;
+        background-image: url(letter_images/logo_djcdesign.png);
+        background-size:contain;
+        background-repeat:no-repeat;
+        z-index: 3000;
+        width: 210px;
+        height: 35px;
+        text-indent: -3000em;
+	padding-bottom: 0;
+	margin-bottom: 0;
     }
 
  header nav ul {
@@ -2190,6 +2205,7 @@ h1#logo a {
         padding-top: 0;
         padding-bottom: 0;
         position: relative;
+	left: -.5em;
         padding-left: 0;
         padding-right: 0;
         width: 210px;
