--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2186,7 +2186,7 @@ h1#logo a {
 h1#logo a {
         position: absolute;
         top: 0.25em;
-        left: 1em;
+        left: .75em;
         background-image: url(letter_images/logo_djcdesign.png);
         background-size:contain;
         background-repeat:no-repeat;
