--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1436,7 +1436,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top: -10.8em;
+        top: -10.85em;
         left: -6em;
         padding: 0;
         transform:scale(.57);
@@ -1467,7 +1467,7 @@ footer .footersection2 nav.nav2 ul li {
         position: relative;
         width: 350px;
         font-family: Optima, Arsenal, "Gill Sans", sans-serif;
-        left: 2em;
+        left: 6em;
         top: 13em;
         font-size: .8em;
         color: #f2dabd;
@@ -1817,7 +1817,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top: -14.9em;
+        top: -14em;
         left: -10em;
         padding: 0;
         transform:scale(.48);
@@ -1838,10 +1838,10 @@ footer .footersection2 nav.nav2 ul li {
 
     #home h2 {
         position: relative;
-        width: 100px;
+        width: 200px;
         font-family: Optima, Arsenal, "Gill Sans", sans-serif;
         left: 5em;
-        top: 10em;
+        top: 11em;
         font-size: .8em;
         color: #f2dabd;
         z-index: 200;
@@ -1983,7 +1983,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top: -16.5em;
+        top: -16.75em;
         left: -17em;
         padding: 0;
         transform:scale(.4);
@@ -1993,8 +1993,8 @@ footer .footersection2 nav.nav2 ul li {
         position: relative;
         width: 100px;
         font-family: Optima, Arsenal, "Gill Sans", sans-serif;
-        left: 5em;
-        top: 11em;
+        left: 7.5em;
+        top: 12.5em;
         font-size: .625em;
         color: #f2dabd;
         z-index: 200;
@@ -2118,7 +2118,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top: -21.5em;
+        top: -21.7em;
         left: -22.5em;
         padding: 0;
         transform:scale(.27);
@@ -2137,6 +2137,33 @@ h1#logo a {
         text-indent: -3000em;
 	padding-bottom: 0;
 	margin-bottom: 0;
+    }
+
+    #home h2 {
+        position: relative;
+        width: 100px;
+        font-family: Optima, Arsenal, "Gill Sans", sans-serif;
+        left: 5em;
+        top: 8.5em;
+        font-size: .625em;
+        color: #f2dabd;
+        z-index: 200;
+        animation-name: slogapp;
+        animation-duration: 1.5s;
+        animation-delay: 1s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        opacity: 0;
+        z-index: 510;
+        padding: 0;
+    }
+    
+    @keyframes slogapp {
+
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+
     }
 
     header nav ul {
