--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1011,8 +1011,8 @@ footer .footersection2 nav.nav2 ul li {
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top: -14.5em;
-        left: .5em;
+        top: -14em;
+        left: 0;
         padding: 0;
         transform:scale(.56);
     }
@@ -1034,9 +1034,9 @@ footer .footersection2 nav.nav2 ul li {
         position: relative;
         width: 350px;
         font-family: Optima, Arsenal, 'Gill Sans', sans-serif;
-        left: 6em;
-        top: 6.5em;
-        font-size: 1.2em;
+        left: 7em;
+        top: 5.5em;
+        font-size: 1em;
         color: #f2dabd;
         z-index: 200;
         animation-name: slogapp;
