--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1525,7 +1525,7 @@ footer .footersection2 nav.nav2 ul li {
     footer .footersection1 a {
         /*color: #f2dabd;*/
         color: white;
-        font-size: 1em;
+        font-size: .8em;
     }
 
     footer .footersection1 ul {
