--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1491,8 +1491,8 @@ footer .footersection2 nav.nav2 ul li {
     header nav  {
         width: 360px;
         position: absolute;
-        top: 2em;
-        left: 2.5em;
+        top: 0;
+        left: 12em;
         z-index: 505;
         padding: 0 0 1em 0;
         
