--- a/dimistyles.css
+++ b/dimistyles.css
@@ -913,7 +913,7 @@ footer .footersection1 ul {
 footer li {
     margin-left: 1em;
     list-style: none;
-    margin-bottom: 1.5em;
+    margin-bottom: 1em;
     margin-top: 1em
 }
 
@@ -1436,7 +1436,7 @@ footer .footersection2 nav.nav2 ul li {
         margin-left:auto;
         margin-right:auto;
         position: relative;
-        top: -16em;
+        top: -16.5em;
         left: -6em;
         padding: 0;
         transform:scale(.48);
@@ -1498,7 +1498,7 @@ footer .footersection2 nav.nav2 ul li {
         
     } 
 
-    nav ul {
+    header nav ul {
         margin-top: .5em;
         border-top: 5px solid #BFA288;
         border-bottom: 5px solid #BFA288;
@@ -1508,6 +1508,7 @@ footer .footersection2 nav.nav2 ul li {
         padding-left: 0;
         padding-right: 0;
         width: 480px;
+	background-color:#f2dabd;
     }
 
     nav ul li.about {
